moves CVA and president includes to respective folders

--- a/development/terminalfour/src/html/CVA-homepage.html
+++ b/development/terminalfour/src/html/CVA-homepage.html
@@ -242,12 +242,12 @@
         <!-- SITEMANAGER HEADER ENDS HERE -->
         <!-- *********************************  -->
 
-        @@include('CVA-info-panel-linkcol.html')
-        @@include('CVA-info-panel-rightcol.html')
-        @@include('CVA-exhibition.html')
-        @@include('CVA-exhibitor-list.html')
-        @@include('CVA-info-panel.html')
-        @@include('CVA-side-by-side-panels.html')
+        @@include('CVA/CVA-info-panel-linkcol.html')
+        <!-- @@include('CVA/CVA-info-panel-rightcol.html') -->
+        @@include('CVA/CVA-exhibition.html')
+        @@include('CVA/CVA-exhibitor-list.html')
+        @@include('CVA/CVA-info-panel.html')
+        @@include('CVA/CVA-side-by-side-panels.html')
 
 
 
