adds viewbook styles and fixes admissions resources

--- a/www-root/admissions.html
+++ b/www-root/admissions.html
@@ -453,7 +453,7 @@ $(window).scroll(function(){
 
           <section class="admissionsHomepage admissionsHomepageResources">
 	<div class="container" style="padding-bottom: 10px;">
-		<div class="row">
+		<div class="col-xs-12">
 			<h2 class="fancy"><span>Resources</span></h2>
 		</div>
 	</div>
