--- a/development/terminalfour/src/html/viewbook.html
+++ b/development/terminalfour/src/html/viewbook.html
@@ -6,6 +6,7 @@
    <title>MSU Denver - Vendor Layout</title>
    <link href="style-assets/media/fonts/font-awesome/css/font-awesome.min.css" rel="stylesheet" media="screen" />
    <link rel="stylesheet" href="style-assets/css/vendor-style.css" />
+   <link rel="stylesheet" href="style-assets/css/main-style.css" />
 
 
 </head>
@@ -13,9 +14,14 @@
         @@include('vendor-includes/header-vendor.html')
 
           @@include('paragraph-styles.html')
+          @@include('viewbook/hero-video.html')
+          @@include('viewbook/infographics-panel.html')
+          @@include('viewbook/background-panel.html')
+
+
           @@include('admissionsHomepageIncludes/admissionsHomepageResources.html')
 
-        @@include('vendor-includes/footer-vendor.html')
+        @@include('footer.html')
         <script src="style-assets/lib/jquery/jquery.min.js"></script>
         <script src="style-assets/lib/jquery-match-height/jquery.matchHeight.js"></script>
         <script src="style-assets/lib/boostrap/bootstrap.min.js"></script>
