--- a/www-root/1column-vendor.html
+++ b/www-root/1column-vendor.html
@@ -41,7 +41,7 @@
 
           <!-- <section class="admissionsHomepage admissionsHomepageResources">
 	<div class="container" style="padding-bottom: 10px;">
-		<div class="row">
+		<div class="col-xs-12">
 			<h2 class="fancy"><span>Resources</span></h2>
 		</div>
 	</div>
