--- a/www-root/viewbook.html
+++ b/www-root/viewbook.html
@@ -6,6 +6,7 @@
    <title>MSU Denver - Vendor Layout</title>
    <link href="style-assets/media/fonts/font-awesome/css/font-awesome.min.css" rel="stylesheet" media="screen" />
    <link rel="stylesheet" href="style-assets/css/vendor-style.css" />
+   <link rel="stylesheet" href="style-assets/css/main-style.css" />
 
 
 </head>
@@ -39,9 +40,128 @@
   </div>
 </div>
 
+
+          <div class="col-xs-12 infographics-panel">
+  <div class="col-xs-12 col-md-4">
+    <span>Data</span>
+    <span>graphic</span>
+    <span>Caption</span>
+  </div>
+
+  <div class="col-xs-12 col-md-4">
+    <span>Data</span>
+    <span>graphic</span>
+    <span>Caption</span>
+  </div>
+
+  <div class="col-xs-12 col-md-4">
+    <span>Data</span>
+    <span>graphic</span>
+    <span>Caption</span>
+  </div>
+
+  <div class="col-xs-12 col-md-4">
+    <span>Data</span>
+    <span>graphic</span>
+    <span>Caption</span>
+  </div>
+
+  <div class="col-xs-12 col-md-4">
+    <span>Data</span>
+    <span>graphic</span>
+    <span>Caption</span>
+  </div>
+
+  <div class="col-xs-12 col-md-4">
+    <span>Data</span>
+    <span>graphic</span>
+    <span>Caption</span>
+  </div>
+
+</div>
+
+          <section style="">
+<div class="col-xs-12 col-md-6 background-panel" style="background: url('https://msudenver.edu/media/content/admissions/admissionshomepage/financial-aid-and-cost.jpg') center center no-repeat; background-size: cover;">
+
+<h2> Header style 2 </h2>
+<h3> Header style 3 </h3>
+<h4> Header style 3 </h4>
+<p>Background Panel Caption<p>
+<a href="#">This is the link > </a>
+
+</div>
+
+
+<div class="col-xs-12 col-md-6 background-panel" style="background: url('https://msudenver.edu/media/content/admissions/admissionshomepage/financial-aid-and-cost.jpg')center center no-repeat; background-size: cover;">
+
+<h2> Header style 2 </h2>
+<h3> Header style 3 </h3>
+<h4> Header style 3 </h4>
+<p>Background Panel Caption<p>
+<a href="#">This is the link > </a>
+
+</div>
+
+
+<div class="col-xs-12 col-md-12 background-panel" style="background: url('https://msudenver.edu/media/content/admissions/admissionshomepage/financial-aid-and-cost.jpg')center center no-repeat; background-size: cover;">
+
+
+
+</div>
+
+
+<div class="col-xs-12 col-md-6 background-panel" style="background: url('https://msudenver.edu/media/content/admissions/admissionshomepage/financial-aid-and-cost.jpg')center center no-repeat; background-size: cover;">
+
+<h2> Header style 2 </h2>
+<h3> Header style 3 </h3>
+<h4> Header style 3 </h4>
+<p>Background Panel Caption<p>
+<a href="#">This is the link > </a>
+
+</div>
+
+
+
+<div class="col-xs-12 col-md-12 background-panel background-panel-inverse" style="background: url('https://msudenver.edu/media/content/admissions/admissionshomepage/financial-aid-and-cost.jpg')center center no-repeat; background-size: cover;">
+
+<h2> White panel </h2>
+<h3> Header style 3 </h3>
+<h4> Header style 3 </h4>
+<p>Background Panel Caption<p>
+<a href="#">This is the link > </a>
+
+</div>
+
+
+<div class="col-xs-12 col-md-6 background-panel background-panel-red">
+
+<h2> Header style 2 </h2>
+<h3> Header style 3 </h3>
+<h4> Header style 3 </h4>
+<p>Background Panel Caption<p>
+<a href="#">This is the link > </a>
+
+</div>
+
+
+<div class="col-xs-12 col-md-12 background-panel background-panel-gray">
+
+<h2> Header style 2 </h2>
+<h3> Header style 3 </h3>
+<h4> Header style 3 </h4>
+<p>Background Panel Caption<p>
+<a href="#">This is the link > </a>
+
+</div>
+
+
+</section>
+
+
+
           <section class="admissionsHomepage admissionsHomepageResources">
 	<div class="container" style="padding-bottom: 10px;">
-		<div class="row">
+		<div class="col-xs-12">
 			<h2 class="fancy"><span>Resources</span></h2>
 		</div>
 	</div>
@@ -92,24 +212,120 @@
 </section>
 
 
-        <footer>
-    <section class="footer-container">
-        <div class="container">
-            <div class="col-xs-4 col-md-2">
-                <img src="style-assets/media/msudenver_informal.svg"  class="footer-logo-img" alt="MSU logo" />
-            </div>
-            <div class="col-xs-8 col-md-5">
-                  <p><a href="https://msudenver.edu"><strong>Metropolitan State University of Denver</strong></a></p>
-                  <p><a href="https://msudenver.edu/maps/">Denver, Colorado</a></p>
-                  <p>303-556-5740</p>
-                  <p><a href="https://msudenver.edu/contact/" href="javascript:void(0)">Contac Us</a></p>
-            </div>
-            <div class="col-xs-12 col-md-5 privacy-statement">
-                <p><a href="https://msudenver.edu">&copy; MSU Denver All Rights Reserved</a>  |  <a href="https://msudenver.edu/privacy">Privacy Statement</a></p>
-            </div>
-        </div>
-    </section>
-</footer>
+        <!-- ** Site wide footer ** -->
+
+    <footer>
+    <!-- footer-bg-mob -->
+    <div class="footer-bg-mob"> 
+              <section class="footer-container"> 
+                  <div class="footer-promos-row">
+                      <!-- Footer promo -->
+                      <div class="footer-promo"> 
+                          <div class="footer-promo-bg">
+                              <h2 class="footer-promo-heading">MSU Denver's Next President</h2>
+                              <hr />
+                              <p class="footer-promo-text">The University is currently conducting a nationwide search for its next president. </p>
+                              <a class="btn homepage-btn footer-btn">Learn more</a>
+                          </div>
+                      </div>
+                      <!-- // Footer promo -->
+                      <!-- Footer promo -->
+                      <div class="footer-promo"> 
+                          <div class="footer-promo-bg">
+                              <h2 class="footer-promo-heading">MSU Denver's Next President</h2>
+                              <hr />
+                              <p class="footer-promo-text">The University is currently conducting a nationwide search for its next president. </p>
+                              <a class="btn homepage-btn footer-btn">Learn more</a>
+                          </div>
+                      </div>
+                      <!-- // Footer promo --><!-- Footer promo -->
+                      <div class="footer-promo"> 
+                          <div class="footer-promo-bg">
+                              <h2 class="footer-promo-heading">MSU Denver's Next President</h2>
+                              <hr />
+                              <p class="footer-promo-text">The University is currently conducting a nationwide search for its next president. </p>
+                              <a class="btn homepage-btn footer-btn">Learn more</a> 
+                          </div>
+
+                      </div>
+                      <!-- // Footer promo -->
+
+                  </div><!-- // .footer-promos-row (row) -->
+                  <hr class="footer-row-hr" /> 
+                  <div class="footer-menu-row">
+                     <div class="footer-campus-info visible-xs">
+
+                            <p><a href="javascript:void(0)"><strong>Metropolitan State University of Denver</strong></a></p>
+                            <p><i role="presentation" class="fa fa-map-marker fa-lg"></i> <a href="javascript:void(0)">Denver, Colorado</a></p>
+                            <p><i role="presentation" class="fa fa-phone fa-lg"></i> <a href="javascript:void(0)">303-556-5740</a></p>
+                            <p><i role="presentation" class="fa fa-comments chat-icon fa-lg"></i> <a onclick="javascript:void(0)" href="javascript:void(0)">Chat with Us (8 a.m.&ndash;5 p.m. MT, Weekdays)</a></p>
+
+
+                      </div><!-- .campus-info  -->
+                      <div class="footer-links">
+                          <div class="footer-links-row">
+                              <div class="footer-links-col "> 
+                                <ul class="footer-nav list-unstyled">
+                                    <li><a href="javascript:void(0)" id="Footer-About">About</a></li>
+                                    <li><a href="javascript:void(0)" id="Footer-DegreePrograms">Degree Programs</a></li>
+                                    <li><a href="javascript:void(0)" id="Footer-Cost">Cost</a></li>
+                                    <li><a href="javascript:void(0)" id="Footer-FinancialAid">Financial Aid</a></li>
+                                    <li><a href="javascript:void(0)" id="Footer-Bookstore" target="_blank">Bookstore</a></li>
+                                </ul>  
+                              </div>
+                              <div class="footer-links-col"> 
+                                <ul class="footer-nav list-unstyled">
+                                    <li><a href="javascript:void(0)" id="Footer-Tours">Tours</a></li>
+                                    <li><a href="javascript:void(0)" id="Footer-Directions">Directions</a></li>
+                                    <li><a href="javascript:void(0)" id="Footer-Parking">Parking</a></li>
+                                    <li><a href="javascript:void(0)" id="Footer-Careers" target="_blank">Careers</a></li>
+                                    <li><a href="javascript:void(0)">Safety</a></li> 
+                                </ul>
+                              </div>
+                              <div class="social-mobile footer-links visible-xs"> 
+                                  <ul class="list-unstyled footer-social">   
+                                    <li><a href="javascript:void(0)" target="_blank"><i role="presentation" class="fa fa-facebook-square fa-2x"></i></a></li>
+                                    <li><a href="javascript:void(0)" target="_blank"><i role="presentation" class="fa fa-twitter-square fa-2x"></i></a></li>
+                                    <li><a href="javascript:void(0)" target="_blank"><i role="presentation" class="fa fa-linkedin-square fa-2x"></i></a></li>
+                                    <li><a href="javascript:void(0)" target="_blank"><i role="presentation" class="fa fa-instagram fa-2x"></i></a></li>
+                                    <li><a href="javascript:void(0)" target="_blank"><i role="presentation" class="fa fa-flickr fa-2x"></i></a></li>
+                                    <li><a href="javascript:void(0)" target="_blank"><i role="presentation" class="fa fa-youtube-square fa-2x"></i></a></li>
+                                  </ul>
+                              </div>    
+                          </div><!-- // .footer-links-row -->
+
+                      </div><!-- // .footer-links (col) -->
+
+                      <div class="footer-campus-info hidden-xs">
+
+                            <p><a href="javascript:void(0)"><strong>Metropolitan State University of Denver</strong></a></p>
+                            <p><i role="presentation" class="fa fa-map-marker fa-lg"></i> <a href="javascript:void(0)">Denver, Colorado</a></p>
+                            <p><i role="presentation" class="fa fa-phone fa-lg"></i> <a href="javascript:void(0)">303-556-5740</a></p>
+                            <p><i role="presentation" class="fa fa-comments chat-icon fa-lg"></i> <a onclick="javascript:void(0)" href="javascript:void(0)">Chat with Us (8 a.m.&ndash;5 p.m. MT, Weekdays)</a></p>
+                            <ul class="list-unstyled footer-social">
+                                    <li><a href="javascript:void(0)" target="_blank"><i role="presentation" class="fa fa-facebook-square fa-2x"></i></a></li>
+                                    <li><a href="javascript:void(0)" target="_blank"><i role="presentation" class="fa fa-twitter-square fa-2x"></i></a></li>
+                                    <li><a href="javascript:void(0)" target="_blank"><i role="presentation" class="fa fa-linkedin-square fa-2x"></i></a></li>
+                                    <li><a href="javascript:void(0)" target="_blank"><i role="presentation" class="fa fa-instagram fa-2x"></i></a></li>
+                                    <li><a href="javascript:void(0)" target="_blank"><i role="presentation" class="fa fa-flickr fa-2x"></i></a></li>
+                                    <li><a href="javascript:void(0)" target="_blank"><i role="presentation" class="fa fa-youtube-square fa-2x"></i></a></li>
+                            </ul> 
+
+                      </div><!-- .campus-info  -->
+
+                      <div class="footer-logo">
+                          <p><a href="javascript:void(0)"> 
+                            <img src="style-assets/media/msudenver_informal.svg"  class="footer-logo-img" alt="MSU logo" />
+                          </a></p>
+                          <p class="privacy-statement"><a href="javascript:void(0)"><small>&copy; MSU Denver</small></a> - <a href="javascript:void(0)"><small>Privacy Statement</small></a></p>
+
+                      </div><!-- .footer-logo -->
+                  </div><!-- .row -->
+
+
+              </section><!-- footer .container -->
+    </div>
+    </footer>
 
         <script src="style-assets/lib/jquery/jquery.min.js"></script>
         <script src="style-assets/lib/jquery-match-height/jquery.matchHeight.js"></script>
