commits all changes for the viewbook launch

--- a/development/terminalfour/src/html/viewbook.html
+++ b/development/terminalfour/src/html/viewbook.html
@@ -5,15 +5,15 @@
    <meta name="viewport" content="initial-scale=1">
    <title>MSU Denver - Vendor Layout</title>
    <link href="style-assets/media/fonts/font-awesome/css/font-awesome.min.css" rel="stylesheet" media="screen" />
-   <link rel="stylesheet" href="style-assets/css/vendor-style.css" />
+   <!-- <link rel="stylesheet" href="style-assets/css/vendor-style.css" /> -->
    <link rel="stylesheet" href="style-assets/css/main-style.css" />
 
 
 </head>
     <body>
-        @@include('vendor-includes/header-vendor.html')
+          @@include('header.html')
 
-          @@include('paragraph-styles.html')
+          <!-- @@include('paragraph-styles.html') -->
           @@include('viewbook/hero-video.html')
           @@include('viewbook/infographics-panel.html')
           @@include('viewbook/background-panel.html')
