--- a/www-root/viewbook.html
+++ b/www-root/viewbook.html
@@ -5,32 +5,171 @@
    <meta name="viewport" content="initial-scale=1">
    <title>MSU Denver - Vendor Layout</title>
    <link href="style-assets/media/fonts/font-awesome/css/font-awesome.min.css" rel="stylesheet" media="screen" />
-   <link rel="stylesheet" href="style-assets/css/vendor-style.css" />
+   <!-- <link rel="stylesheet" href="style-assets/css/vendor-style.css" /> -->
    <link rel="stylesheet" href="style-assets/css/main-style.css" />
 
 
 </head>
     <body>
-        <!-- Global Header -->
+          <!-- Global Header -->
 <a href="#content" class="skip-content">Skip to main content</a>
 <header>
-   <div class="navbar-fixed-top">
-         <div class="col-xs-12 col-md-6 col-md-push-6">
-           <a href="https://msudenver.edu">
-              <img class="msudenver_logo" src="https://msudenver.edu/media/newsiteassets/images/msudenver_logo_header.svg" alt="MSU Denver Homepage">
-           </a>
+   <div class="navbar-fixed-top ">
+      <div class="" style="background-image:url(https://msudenver.edu/media/newsiteassets/images/header_asphalt.png); background-size: 100%;" alt="Asphalt Image">
+         <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
+         <span class="sr-only">Toggle quick links navigation</span>
+         <span class="fa fa-bars"></span>
+         </button>
+         <div class="row container-fluid">
+            <div class="col-xs-8">
+               <a href="/"> <img class="msudenver_logo" src="https://msudenver.edu/media/newsiteassets/images/msudenver_logo_header.svg" alt="MSU Denver Homepage"> </a>
+            </div>
          </div>
-         <div class="container">
-           <div class="col-xs-12 col-md-6 col-md-pull-6">
-              <h1>Site Name </h1>
+      </div>
+      <nav class="navbar nav-header">
+         <!-- Brand and toggle get grouped for better mobile display -->
+         <!-- Collect the nav links, forms, and other content for toggling -->
+         <div class="" id="bs-example-navbar-collapse-1">
+           <div class="collapse navbar-collapse">
+               <a href="/visit" type="button" class="btn btn-default visit-give-mobile">Visit</a>
+               <a href="/giving" type="button" class="btn btn-default visit-give-mobile give-mobile ">Give</a>
+               <a href="/admissions" type="button" class="btn btn-default apply-mobile">Apply</a>
            </div>
+            <ul id="menu-nav" class="nav navbar-nav">
+              <li class="collapse navbar-collapse">
 
+                 <ul class="fac-staf-stu-mobile">
+                    <li><a href="/studenthub">Current Students</a></li>
+                    <li class="hide-pipe">|</li>
+                    <li><a href="/facstaff">Faculty &amp; Staff</a></li>
+                 </ul>
+              </li>
+               <li class="dropdown collapse navbar-collapse">
+                  <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">About <i role="presentation" class="fa fa-angle-down fa-lg"></i></a>
+                  <ul class="dropdown-menu">
+                    <li><a href="/about">About MSU Denver</a></li>
+                    <li><a href="/about/strategicplan2020">Strategic Plan 2020</a></li>
+                    <li><a href="/president">Office of the President</a></li>
+                    <li><a href="/trustees">Board of Trustees</a></li>
+                    <li><a href="/eoo">Office of Equal Opportunity</a></li>
+                    <li><a href="/our-past">Our Past</a></li>
+                    <li><a href="/contact">Questions / Comments</a></li>
+                    <li><a href="/commencement">Graduation / Commencement</a></li>
+                    <li><a href="/a-to-z/">A to Z</a></li>
+                  </ul>
+               </li>
+               <li class="dropdown collapse navbar-collapse">
+                  <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Prospective Students <i role="presentation" class="fa fa-angle-down fa-lg"></i></a>
+                  <ul class="dropdown-menu">
+                    <li><a href="/admissions">Admissions</a></li>
+                    <li><a href="/admissions/student-types/first-timeundergraduate/">First-Time Undergraduate</a></li>
+                    <li><a href="/admissions/student-types/transfer">Transfer Students</a></li>
+                    <li><a href="/admissions/student-types/adultstudents">Adult Students</a></li>
+                    <li><a href="/admissions/student-types/masters">Master&rsquo;s Programs</a></li>
+                    <li><a href="/admissions/student-types/militaryveteran">Military Veterans</a></li>
+                    <li><a href="/admissions/student-types/internationalstudents">International Students</a></li>
+                    <li><a href="/admissions/student-types/re-admit">Re-Admit</a></li>
+                    <li><a href="/admissions/student-types/non-degree">Non-Degree</a></li>
+                    <li><a href="/admissions/student-types/concurrentlyenrolled">Concurrently Enrolled</a></li>
+                    <li><a href="/cost">Cost</a></li>
+                  </ul>
+               </li>
+               <li class="dropdown collapse navbar-collapse">
+                  <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Academics <i role="presentation" class="fa fa-angle-down fa-lg"></i></a>
+                  <ul class="dropdown-menu">
+                    <li><a href="/academics/">Academics Overview</a></li>
+                    <li><a href="/programs/">Academic Programs</a></li>
+                    <li><a href="/academics/schedulescalendarscatalogs/">Schedules, Calendars &amp; Catalogs</a></li>
+                    <li><a href="/las/">College of Letters, Arts &amp; Sciences</a></li>
+                    <li><a href="/cps/">College of Professional Studies</a></li>
+                    <li><a href="/business/">College of Business</a></li>
+                    <li><a href="/education/">School of Education</a></li>
+                    <li><a href="/fys/">First Year Success</a></li>
+                    <li><a href="/campuslife/academicsupport">Academic Support</a></li>
+                    <li><a href="/online/">Online Courses</a></li>
+                    <li><a href="/innovative-lifelong-learning/">Innovative and Lifelong Learning</a></li>
+                    <li><a href="/academics/specialprograms">Special Programs</a></li>
+                    <li><a href="/studentengagementandwellness">Student Engagement &amp; Wellness</a></li>
+                  </ul>
+               </li>
+               <li class="dropdown collapse navbar-collapse">
+                  <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Alumni and Friends <i role="presentation" class="fa fa-angle-down fa-lg"></i></a>
+                  <ul class="dropdown-menu">
+                    <li><a href="/alumni/">Alumni &amp; Friends Home</a></li>
+                    <li><a href="/alumni/alumnibenefits/">Alumni Benefits</a></li>
+                    <li><a href="/alumni/getinvolved/">Get Involved</a></li>
+                    <li><a href="/alumni/lifelonglearning/">Lifelong Learning</a></li>
+                    <li><a href="/alumni/events">Alumni Events</a></li>
+                    <li><a href="/alumni/alumniassociation/">Alumni Association</a></li>
+                    <li><a href="/alumni/alumnimagazine/">MSU Denver Magazine</a></li>
+                    <li><a href="/alumni/contactus/">Contact Alumni &amp; Friends</a></li>
+                  </ul>
+               </li>
+               <li class="dropdown collapse navbar-collapse dropdown-last">
+                  <a href="http://roadrunnersathletics.com"  role="button">Athletics </a>
+               </li>
+               <li id="nav-search" type="button">
+                 <a href="#" data-toggle="modal" data-target="#searchModal">
+                   <label for="nav-search" class="sr-only">Search MSU Denver dot e d u</label>
+                   <span class="search-button-text">SEARCH   </span><span class="fa fa-search search-desktop"></span>
+                 </a>
+               </li>
+            </ul>
          </div>
+         <!-- /.navbar-collapse -->
+      </nav>
    </div>
 </header>
+<!-- Button trigger modal -->
+<!-- Modal -->
+<div class="modal fade" id="searchModal" tabindex="-1" role="dialog" aria-labelledby="searchModalLabel">
+  <h4 class="modal-title" id="searchModalLabel">Search MSU Denver</h4>
+   <div class="modal-dialog" role="document">
+      <div class="modal-content">
+         <div class="modal-header">
+            <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">close search  <b>&times;</b></span></button>
+         </div>
+         <div class="modal-body">
+            <form action="https://www.msudenver.edu/search" aria-label="search">
+               <div class="form-group" aria-label="search">
+                  <input type="text" class="form-control" placeholder="Search MSU Denver...">
+               </div>
+               <button type="submit" class="fa fa-search submit-desktop" aria-label="submit search"></button>
+            </form>
+         </div>
+         <!-- <div class="modal-footer">
+            <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+         </div> -->
+      </div>
+   </div>
+</div>
+
+<!-- allow mobile menu dropdown to scroll -->
+<script>
+$('#bs-example-navbar-collapse-1').css('max-height',$(window).height()-79);
+</script>
+
+<script>
+// scrollTop function
+$(window).scroll(function(){
+  var width_threshold = 900;
+  var href = document.location.href;
+  var position = $(window).scrollTop();
+  var width     =  $(window).width();
+  $(".header-fluid").removeClass("header-fluid-change");
+  $(".msudenver_logo").removeClass("msudenver_logo_change");
 
 
-          <div class="container">
+  if( position > 15 && width > width_threshold) {
+    $(".header-fluid").toggleClass("header-fluid-change");
+    $(".msudenver_logo").toggleClass("msudenver_logo_change");
+  }
+
+});
+</script>
+
+
+          <!-- <div class="container">
   <div class="col-xs-12">
     <h1>This is a Header 1</h1>
     <h2>This is a Header 2</h2>
@@ -39,7 +178,11 @@
     <p>This is a pararaph</p>
   </div>
 </div>
+ -->
+          <div>
+<div style="padding:56.25% 0 0 0;position:relative;"><iframe src="https://player.vimeo.com/video/283756557?autoplay=1&loop=1" style="position:absolute;top:0;left:0;width:100%;height:100%;" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe></div><script src="https://player.vimeo.com/api/player.js"></script>
 
+</div>
 
           <div class="col-xs-12 infographics-panel">
   <div class="col-xs-12 col-md-4">
@@ -81,25 +224,30 @@
 </div>
 
           <section style="">
-<div class="col-xs-12 col-md-6 background-panel" style="background: url('https://msudenver.edu/media/content/admissions/admissionshomepage/financial-aid-and-cost.jpg') center center no-repeat; background-size: cover;">
 
-<h2> Header style 2 </h2>
-<h3> Header style 3 </h3>
-<h4> Header style 3 </h4>
-<p>Background Panel Caption<p>
-<a href="#">This is the link > </a>
+
+
+  <div class="col-xs-12 col-md-12 background-panel background-panel-red">
+    <span>
+  <h2> When you become a roadrunner. </h2>
+  <p>you join a globgasl community ofd determimnedf individuals, who have taken the opportunities offered at MSU Denver - and ru with them<p>
+  </span>
+  </div>
+
+<div class="col-xs-12 col-md-6 background-panel" style="background: url('style-assets/media/viewbook-assets/2studentsuccess.png') center center no-repeat; background-size: cover;">
+
+
 
 </div>
 
 
-<div class="col-xs-12 col-md-6 background-panel" style="background: url('https://msudenver.edu/media/content/admissions/admissionshomepage/financial-aid-and-cost.jpg')center center no-repeat; background-size: cover;">
-
-<h2> Header style 2 </h2>
-<h3> Header style 3 </h3>
-<h4> Header style 3 </h4>
-<p>Background Panel Caption<p>
-<a href="#">This is the link > </a>
-
+<div class="col-xs-12 col-md-6 background-panel" style="background: url('style-assets/media/viewbook-assets/3campusmaps.png')center center no-repeat; background-size: cover;">
+<a href="#" >
+<span >
+<p>Go on the MSU Denver vitual tour to experience our campus.<p>
+<p class="panel-link">Launch tour >  </p>
+</span>
+</a>
 </div>
 
 
@@ -111,47 +259,47 @@
 
 
 <div class="col-xs-12 col-md-6 background-panel" style="background: url('https://msudenver.edu/media/content/admissions/admissionshomepage/financial-aid-and-cost.jpg')center center no-repeat; background-size: cover;">
-
+<span>
 <h2> Header style 2 </h2>
 <h3> Header style 3 </h3>
 <h4> Header style 3 </h4>
 <p>Background Panel Caption<p>
 <a href="#">This is the link > </a>
-
+</span>
 </div>
 
 
 
-<div class="col-xs-12 col-md-12 background-panel background-panel-inverse" style="background: url('https://msudenver.edu/media/content/admissions/admissionshomepage/financial-aid-and-cost.jpg')center center no-repeat; background-size: cover;">
-
+<div class="col-xs-12 col-md-12 background-panel background-panel-inverse" style="background: url('style-assets/media/viewbook-assets/7tivolibackground.png')center center no-repeat; background-size: cover;">
+<span>
 <h2> White panel </h2>
 <h3> Header style 3 </h3>
 <h4> Header style 3 </h4>
 <p>Background Panel Caption<p>
 <a href="#">This is the link > </a>
-
+</span>
 </div>
 
 
 <div class="col-xs-12 col-md-6 background-panel background-panel-red">
-
+<span>
 <h2> Header style 2 </h2>
 <h3> Header style 3 </h3>
 <h4> Header style 3 </h4>
 <p>Background Panel Caption<p>
 <a href="#">This is the link > </a>
-
+</span>
 </div>
 
 
 <div class="col-xs-12 col-md-12 background-panel background-panel-gray">
-
+<span>
 <h2> Header style 2 </h2>
 <h3> Header style 3 </h3>
 <h4> Header style 3 </h4>
 <p>Background Panel Caption<p>
 <a href="#">This is the link > </a>
-
+</span>
 </div>
 
 
