--- a/development/terminalfour/src/html/homepage.html
+++ b/development/terminalfour/src/html/homepage.html
@@ -14,8 +14,12 @@
         @@include('header.html')
         @@include('topnavigation.html')
         <main class="homepage-main">
-						@@include('braintrain/braintrain.html')
-
+						@@include('homepage-feature-caption.html')
+            @@include('homepage-ryor.html')
+            @@include('homepage-news.html')
+						@@include('homepage-at-a-glance.html')
+						@@include('homepage-community.html')
+						@@include('homepage-events.html')
         </main>
         @@include('footer.html')
         <script src="style-assets/lib/jquery/jquery.min.js"></script>
