updates homepage button

--- a/www-root/homepage.html
+++ b/www-root/homepage.html
@@ -237,7 +237,7 @@ $(window).scroll(function(){
                      </div><!-- ./ .news-feature-item -->
 
         </div><!-- ./ .news-feature-items -->
-        <p class="clearfix main-button"><a href="javascript:void(0)" class="btn homepage-btn homepage-btn__small">Read more RED stories</a> <i role="presentation" class="fa fa-angle-right fa-lg"></i></p>
+        <button class="clearfix main-button"><a href="javascript:void(0)" class="btn homepage-btn homepage-btn__small">Read more RED stories</a> </button>
     </div><!-- ./ .homepage-news-outer-col -->
 </section>
 <!-- ** .// Homepage news ** -->
@@ -341,7 +341,7 @@ $(window).scroll(function(){
 						<section class="homepage-feature" id="homepage-community">
     <div class="hompage-community ">
         <h1 class="feature-heading-large">What's Possible on a Dynamic Campus in the Hearth of the City</h1>
-        <p class="clearfix main-button"><a href="javascript:void(0)" class="btn homepage-btn">Take our Virtual Tour</a></p>
+        <button class="clearfix main-button"><a href="javascript:void(0)" class="btn homepage-btn">Take our Virtual Tour</a></button>
     </div>
 </section>
 
@@ -428,15 +428,13 @@ $(window).scroll(function(){
                 </div><!-- / .event-bg -->
             </div><!-- // .home-event (col) -->
             <!-- ** // Event ** -->
-            
+
         </div><!-- // .home-events-row -->
-        <p class="clearfix main-button"><a href="javascript:void(0)" class="btn homepage-btn">See all upcoming events</a> <i role="presentation" class="fa fa-angle-right fa-lg"></i></p>
+        <button class="clearfix main-button"><a href="javascript:void(0)" class="btn homepage-btn">See all events</a></button>
     </div><!-- // .home-events (col) -->
-    
+
 </section>
 <!-- ** .// Homepage events ** -->
-
-
 
         </main>
         <!-- ** Site wide footer ** -->
