Updates second slider to become 50% 50%

--- a/www-root/homepage.html
+++ b/www-root/homepage.html
@@ -173,18 +173,18 @@ $(window).scroll(function(){
 						<section class="homepage-feature carousel t4-slide slide" id="homepage-feature-caption">
     <div class="carousel-inner">
         <div class="homepage-feature-caption-item item active ">
-            <img class="homepage-feature-caption-img" src="style-assets/media/aes_building.jpg" alt="A photograph of the AES building" />    
+            <img class="homepage-feature-caption-img" src="style-assets/media/aes_building.jpg" alt="A photograph of the AES building" />
             <div class="homepage-feature-caption-text carousel-caption">
                 <h1 class="feature-heading">Our Aerospace and Engineering Sciences Building is almost ready for take off. <code>[[Slider Item I ]]</code></h1>
-                <p class="clearfix main-button"><a href="javascript:void(0)" class="homepage-feature-caption-link feature-heading-sub">Read how we're powering careers and a 21st century economy <i role="presentation" class="fa fa-angle-right"></i></a> </p>
-            </div> 
-        </div>  
+
+            </div>
+        </div>
         <div class="homepage-feature-caption-item item ">
-            <img class="homepage-feature-caption-img" src="style-assets/media/aes_building.jpg" alt="A photograph of the AES building" />    
-            <div class="homepage-feature-caption-text carousel-caption">
+          <div class="col-xs-12 col-md-6 col-md-push-6"> <img class="image-responsive" src="style-assets/media/aes_building.jpg" alt="A photograph of the AES building" />
+          </div>
+            <div class="col-xs12 col-md-6 col-md-pull-6">
                 <h1 class="feature-heading">Our Aerospace and Engineering Sciences Building is almost ready for take off. <code>[[Slider Item II ]]</code></h1>
-                <p class="clearfix main-button"><a href="javascript:void(0)" class="homepage-feature-caption-link feature-heading-sub ">Read how we're powering careers and a 21st century economy <i role="presentation" class="fa fa-angle-right"></i></a> </p>
-            </div> 
+                </div>
         </div>
     </div>
     <a class="left carousel-control" href="#homepage-feature-caption" role="button" data-slide="prev">
@@ -195,7 +195,8 @@ $(window).scroll(function(){
         <span class="fa fa-chevron-circle-right fa-3x" aria-hidden="true"></span>
         <span class="sr-only">Next</span>
       </a>
-</section> 
+</section>
+
                 <!-- ** Homepage news ** -->
 <section class="homepage-feature" id="homepage-news">
     <div class="home-news-features">
