Hero and column fixes
Moves page hero's order over the blue page title and makes it full width. Also duplicates hompeage hero slider item and fixes widths.
Cleans up outdated styles to import.

--- a/www-root/homepage.html
+++ b/www-root/homepage.html
@@ -172,18 +172,20 @@ $(window).scroll(function(){
         <main class="homepage-main">
 						<section class="homepage-feature carousel t4-slide slide" id="homepage-feature-caption">
     <div class="carousel-inner">
-        <div class="homepage-feature-caption-item item active ">
-            <img class="homepage-feature-caption-img" src="style-assets/media/aes_building.jpg" alt="A photograph of the AES building" />
-            <div class="homepage-feature-caption-text carousel-caption">
-                <h1 class="feature-heading">Our Aerospace and Engineering Sciences Building is almost ready for take off. <code>[[Slider Item I ]]</code></h1>
-
-            </div>
-        </div>
-        <div class="homepage-feature-caption-item item ">
+        <!-- Carousel sample one -->
+        <div class="homepage-feature-caption-item item active">
           <div class="col-xs-12 col-md-6 col-md-push-6"> <img class="image-responsive" src="style-assets/media/aes_building.jpg" alt="A photograph of the AES building" />
           </div>
-            <div class="col-xs12 col-md-6 col-md-pull-6">
-                <h1 class="feature-heading">Our Aerospace and Engineering Sciences Building is almost ready for take off. <code>[[Slider Item II ]]</code></h1>
+            <div class="col-xs-12 col-md-5 col-md-pull-5">
+                <h1 class="feature-heading">Our Aerospace and Engineering Sciences Building is almost ready for take off. <code>[[Slider Item Refresh ]]</code></h1>
+                </div>
+        </div>
+        <!-- Caurusel sample two -->
+        <div class="homepage-feature-caption-item item">
+          <div class="col-xs-12 col-md-6 col-md-push-6"> <img class="image-responsive" src="style-assets/media/aes_building.jpg" alt="A photograph of the AES building" />
+          </div>
+            <div class="col-xs-12 col-md-5 col-md-pull-5">
+                <h1 class="feature-heading">Our Aerospace and Engineering Sciences Building is almost ready for take off. <code>[[Slider Item Refresh ]]</code></h1>
                 </div>
         </div>
     </div>
@@ -350,87 +352,13 @@ $(window).scroll(function(){
 <section class="homepage-feature" id="homepage-events">
     <div class="home-events">
         <h1 class="feature-heading-large">What's happening right now at MSU Denver</h1>
-        <div class="home-events-row">
-            <!-- ** Event ** -->
-            <div class="home-event" data-mh="home-event">
-                <div class="event-bg">
-                   <a href="javascript:void(0)">
-                        <img class="home-event-image" src="style-assets/media/event-image.jpg" alt="New Student Convocation show" />
-                        <h2 class="home-event-title">New Student Convocation</h2>
-                        <p class="home-event-date">August 18th at 5:30 PM</p>
-                        <hr />
-                        <h2 class="home-event-venue">P.E. Events Center</h2>
-                    </a>
-                </div><!-- / .event-bg -->
-            </div><!-- // .home-event (col) -->
-            <!-- ** // Event ** -->
-            <!-- ** Event ** -->
-            <div class="home-event" data-mh="home-event">
-                <div class="event-bg">
-                   <a href="javascript:void(0)">
-                        <img class="home-event-image" src="style-assets/media/event-image.jpg" alt="New Student Convocation show" />
-                        <h2 class="home-event-title">New Student Convocation</h2>
-                        <p class="home-event-date">August 18th at 5:30 PM</p>
-                        <hr />
-                        <h2 class="home-event-venue">P.E. Events Center</h2>
-                    </a>
-                </div><!-- / .event-bg -->
-            </div><!-- // .home-event (col) -->
-            <!-- ** // Event ** -->
-            <!-- ** Event ** -->
-            <div class="home-event" data-mh="home-event">
-                <div class="event-bg">
-                   <a href="javascript:void(0)">
-                    <img class="home-event-image" src="style-assets/media/event-image.jpg" alt="New Student Convocation show" />
-                    <h2 class="home-event-title">New Student Convocation</h2>
-                    <p class="home-event-date">August 18th at 5:30 PM</p>
-                    <hr />
-                    <h2 class="home-event-venue">P.E. Events Center</h2>
-                    </a>
-                </div><!-- / .event-bg -->
-            </div><!-- // .home-event (col) -->
-            <!-- ** // Event ** -->
-            <!-- ** Event ** -->
-            <div class="home-event" data-mh="home-event">
-                <div class="event-bg">
-                   <a href="javascript:void(0)">
-                    <img class="home-event-image" src="style-assets/media/event-image.jpg" alt="New Student Convocation show" />
-                    <h2 class="home-event-title">New Student Convocation</h2>
-                    <p class="home-event-date">August 18th at 5:30 PM</p>
-                    <hr />
-                    <h2 class="home-event-venue">P.E. Events Center</h2>
-                    </a>
-                </div><!-- / .event-bg -->
-            </div><!-- // .home-event (col) -->
-            <!-- ** // Event ** -->
-            <!-- ** Event ** -->
-            <div class="home-event" data-mh="home-event">
-                <div class="event-bg">
-                   <a href="javascript:void(0)">
-                    <img class="home-event-image" src="style-assets/media/event-image.jpg" alt="New Student Convocation show" />
-                    <h2 class="home-event-title">New Student Convocation</h2>
-                    <p class="home-event-date">August 18th at 5:30 PM</p>
-                    <hr />
-                    <h2 class="home-event-venue">P.E. Events Center</h2>
-                    </a>
-                </div><!-- / .event-bg -->
-            </div><!-- // .home-event (col) -->
-            <!-- ** // Event ** -->
-            <!-- ** Event ** -->
-            <div class="home-event" data-mh="home-event">
-                <div class="event-bg">
-                   <a href="javascript:void(0)">
-                    <img class="home-event-image" src="style-assets/media/event-image.jpg" alt="New Student Convocation show" />
-                    <h2 class="home-event-title">New Student Convocation</h2>
-                    <p class="home-event-date">August 18th at 5:30 PM</p>
-                    <hr />
-                    <h2 class="home-event-venue">P.E. Events Center</h2>
-                    </a>
-                </div><!-- / .event-bg -->
-            </div><!-- // .home-event (col) -->
-            <!-- ** // Event ** -->
 
-        </div><!-- // .home-events-row -->
+            <div class="home-event">
+                   <a href="javascript:void(0)">
+                    <p><span class="home-event-title">August 18th at 5:30 PM </span> <span class="home-event-date">New Student Convocation </span> </p>
+                    </a>
+            </div>
+
         <button class="clearfix main-button"><a href="javascript:void(0)" class="btn homepage-btn">See all events</a></button>
     </div><!-- // .home-events (col) -->
 
