--- a/development/terminalfour/src/html/2column.html
+++ b/development/terminalfour/src/html/2column.html
@@ -66,15 +66,18 @@
   <a href="#content" class="sr-only">Skip to main content</a>
 
 
-  @@include('site-header.html')
+
 
     <div class="container-fluid" id="content">
         <div class="row">
-                <div class="col-xs-12 col-md-9 col-md-push-3 col-lg-push-4 col-lg-7">
+          <t4 type="navigation" id="106" />
+          @@include('page-hero.html')
+          @@include('site-header.html')
+            <!-- BEGINS HERO IMAGE -->
+
+                <div class="col-xs-12 col-md-9 col-md-push-3 col-lg-9 col-lg-push-3">
                    <div class="content row">
-<!-- BEGINS HERO IMAGE -->
-<t4 type="navigation" id="106" />
-@@include('page-hero.html')
+
 
                         <!-- *********************************  -->
                         <!-- SITEMANAGER HEADER ENDS HERE -->
@@ -91,7 +94,7 @@
                     </div>
                     <t4 type="edit-page" action="direct-edit" text='<i class="fa fa-edit"> </i> Edit this page' />
                 </div>
-                <div class="col-xs-12 col-md-3 col-md-pull-9 col-lg-3 col-lg-pull-6">
+                <div class="col-xs-12 col-md-3 col-md-pull-9 col-lg-3 col-lg-pull-9">
 
 <!-- BEGINS LEFT SIDE (LINK COLUMN -/- SIDEMENU) -->
 <div class="sidebar-nav">
