--- a/www-root/2column.html
+++ b/www-root/2column.html
@@ -222,41 +222,39 @@ $(window).scroll(function(){
   <a href="#content" class="sr-only">Skip to main content</a>
 
 
-  <!-- BEGINS BREADCRUMBS + SITEHEADER -->
+
+
+    <div class="container-fluid" id="content">
+        <div class="row">
+          <t4 type="navigation" id="106" />
+          <div class="row">
+  <div class="col-xs-12 hero">
+  <img class="img-responsive" src="http://msudenver.edu/media/content/departmentofjournalismamptechnicalcommunication/images/JTC-Hero-v2.jpg" alt="work study help desk" style="   " />
+    <div class="hero-caption"><h3>Body of Page Hero Image Content Type</h3>
+  <p>Praesent mauris. Fusce nec tellus sed augue semper porta.</p></div>
+  </div>
+</div>
+
+          <!-- BEGINS BREADCRUMBS + SITEHEADER -->
 <section id="site-header">
-<div class="container-fluid" >
-    <div class="row">
         <!-- SITE HEADER -->
-      <div class="col-xs-12 col-md-11 col-md-push-1">
-      <div class="siteheader">
+
+      <div class="col-xs-12 siteheader">
             <h1>Newsroom</h1>
             <h1><t4 type='navigation' id='101' /></h1>
-      </div>
       <!-- BREADCRUMBS -->
        <ul class="breadcrumb">
            <a href="/">MSU Denver Home</a>&nbsp;/&nbsp;<a href="/newsroom/">Newsroom</a>&nbsp;/&nbsp;<a href="/newsroom/news/">All News/Archive</a>&nbsp;/&nbsp;<a href="/newsroom/news/2016/">2016</a>&nbsp;/&nbsp;May
            <t4 type='navigation' id='89' />
        </ul>
       </div>
-    </div>
-</div>
 </section>
 <!-- ENDS BREADCRUMBS + SITEHEADER -->
 
+            <!-- BEGINS HERO IMAGE -->
 
-    <div class="container-fluid" id="content">
-        <div class="row">
-                <div class="col-xs-12 col-md-9 col-md-push-3 col-lg-push-4 col-lg-7">
+                <div class="col-xs-12 col-md-9 col-md-push-3 col-lg-9 col-lg-push-3">
                    <div class="content row">
-<!-- BEGINS HERO IMAGE -->
-<t4 type="navigation" id="106" />
-<div class="col-xs-12">
-  <div class="hero">
-  <img class="img-responsive" src="http://msudenver.edu/media/content/admissions/images/SSB2_web.jpg" alt="work study help desk" style="   " />
-    <div class="hero-caption"><h3>Body of Page Hero Image Content Type</h3>
-  <p>Praesent mauris. Fusce nec tellus sed augue semper porta.</p></div>
-  </div>
-</div>
 
 
                         <!-- *********************************  -->
@@ -912,7 +910,7 @@ span.fa.fa-caret-right, span.fa.fa-caret-left {
                     </div>
                     <t4 type="edit-page" action="direct-edit" text='<i class="fa fa-edit"> </i> Edit this page' />
                 </div>
-                <div class="col-xs-12 col-md-3 col-md-pull-9 col-lg-3 col-lg-pull-6">
+                <div class="col-xs-12 col-md-3 col-md-pull-9 col-lg-3 col-lg-pull-9">
 
 <!-- BEGINS LEFT SIDE (LINK COLUMN -/- SIDEMENU) -->
 <div class="sidebar-nav">
