--- a/www-root/admissions.html
+++ b/www-root/admissions.html
@@ -44,6 +44,8 @@
                     <li><a href="/studenthub">Current Students</a></li>
                     <li class="hide-pipe">|</li>
                     <li><a href="/facstaff">Faculty &amp; Staff</a></li>
+                    <li class="hide-pipe">|</li>
+                    <li><a href="/employers">Employers</a></li>
                  </ul>
               </li>
                <li class="dropdown collapse navbar-collapse">
@@ -139,9 +141,6 @@
                <button type="submit" class="fa fa-search submit-desktop" aria-label="submit search"></button>
             </form>
          </div>
-         <!-- <div class="modal-footer">
-            <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
-         </div> -->
       </div>
    </div>
 </div>
@@ -509,11 +508,11 @@ $(window).scroll(function(){
 
     <footer>
     <!-- footer-bg-mob -->
-    <div class="footer-bg-mob"> 
-              <section class="footer-container"> 
+    <div class="footer-bg-mob">
+              <section class="footer-container">
                   <div class="footer-promos-row">
                       <!-- Footer promo -->
-                      <div class="footer-promo"> 
+                      <div class="footer-promo">
                           <div class="footer-promo-bg">
                               <h2 class="footer-promo-heading">MSU Denver's Next President</h2>
                               <hr />
@@ -523,7 +522,7 @@ $(window).scroll(function(){
                       </div>
                       <!-- // Footer promo -->
                       <!-- Footer promo -->
-                      <div class="footer-promo"> 
+                      <div class="footer-promo">
                           <div class="footer-promo-bg">
                               <h2 class="footer-promo-heading">MSU Denver's Next President</h2>
                               <hr />
@@ -532,19 +531,19 @@ $(window).scroll(function(){
                           </div>
                       </div>
                       <!-- // Footer promo --><!-- Footer promo -->
-                      <div class="footer-promo"> 
+                      <div class="footer-promo">
                           <div class="footer-promo-bg">
                               <h2 class="footer-promo-heading">MSU Denver's Next President</h2>
                               <hr />
                               <p class="footer-promo-text">The University is currently conducting a nationwide search for its next president. </p>
-                              <a class="btn homepage-btn footer-btn">Learn more</a> 
+                              <a class="btn homepage-btn footer-btn">Learn more</a>
                           </div>
 
                       </div>
                       <!-- // Footer promo -->
 
                   </div><!-- // .footer-promos-row (row) -->
-                  <hr class="footer-row-hr" /> 
+                  <hr class="footer-row-hr" />
                   <div class="footer-menu-row">
                      <div class="footer-campus-info visible-xs">
 
@@ -557,26 +556,26 @@ $(window).scroll(function(){
                       </div><!-- .campus-info  -->
                       <div class="footer-links">
                           <div class="footer-links-row">
-                              <div class="footer-links-col "> 
+                              <div class="footer-links-col ">
                                 <ul class="footer-nav list-unstyled">
                                     <li><a href="javascript:void(0)" id="Footer-About">About</a></li>
                                     <li><a href="javascript:void(0)" id="Footer-DegreePrograms">Degree Programs</a></li>
                                     <li><a href="javascript:void(0)" id="Footer-Cost">Cost</a></li>
                                     <li><a href="javascript:void(0)" id="Footer-FinancialAid">Financial Aid</a></li>
                                     <li><a href="javascript:void(0)" id="Footer-Bookstore" target="_blank">Bookstore</a></li>
-                                </ul>  
+                                </ul>
                               </div>
-                              <div class="footer-links-col"> 
+                              <div class="footer-links-col">
                                 <ul class="footer-nav list-unstyled">
                                     <li><a href="javascript:void(0)" id="Footer-Tours">Tours</a></li>
                                     <li><a href="javascript:void(0)" id="Footer-Directions">Directions</a></li>
                                     <li><a href="javascript:void(0)" id="Footer-Parking">Parking</a></li>
                                     <li><a href="javascript:void(0)" id="Footer-Careers" target="_blank">Careers</a></li>
-                                    <li><a href="javascript:void(0)">Safety</a></li> 
+                                    <li><a href="javascript:void(0)">Safety</a></li>
                                 </ul>
                               </div>
-                              <div class="social-mobile footer-links visible-xs"> 
-                                  <ul class="list-unstyled footer-social">   
+                              <div class="social-mobile footer-links visible-xs">
+                                  <ul class="list-unstyled footer-social">
                                     <li><a href="javascript:void(0)" target="_blank"><i role="presentation" class="fa fa-facebook-square fa-2x"></i></a></li>
                                     <li><a href="javascript:void(0)" target="_blank"><i role="presentation" class="fa fa-twitter-square fa-2x"></i></a></li>
                                     <li><a href="javascript:void(0)" target="_blank"><i role="presentation" class="fa fa-linkedin-square fa-2x"></i></a></li>
@@ -584,10 +583,18 @@ $(window).scroll(function(){
                                     <li><a href="javascript:void(0)" target="_blank"><i role="presentation" class="fa fa-flickr fa-2x"></i></a></li>
                                     <li><a href="javascript:void(0)" target="_blank"><i role="presentation" class="fa fa-youtube-square fa-2x"></i></a></li>
                                   </ul>
-                              </div>    
+                              </div>
                           </div><!-- // .footer-links-row -->
 
                       </div><!-- // .footer-links (col) -->
+
+                      <div class="footer-logo">
+                          <p><a href="javascript:void(0)">
+                            <img src="style-assets/media/msudenver_informal.svg"  class="footer-logo-img" alt="MSU logo" />
+                          </a></p>
+                          <p class="privacy-statement"><a href="javascript:void(0)"><small>&copy; MSU Denver</small></a> - <a href="javascript:void(0)"><small>Privacy Statement</small></a></p>
+
+                      </div><!-- .footer-logo -->
 
                       <div class="footer-campus-info hidden-xs">
 
@@ -602,17 +609,11 @@ $(window).scroll(function(){
                                     <li><a href="javascript:void(0)" target="_blank"><i role="presentation" class="fa fa-instagram fa-2x"></i></a></li>
                                     <li><a href="javascript:void(0)" target="_blank"><i role="presentation" class="fa fa-flickr fa-2x"></i></a></li>
                                     <li><a href="javascript:void(0)" target="_blank"><i role="presentation" class="fa fa-youtube-square fa-2x"></i></a></li>
-                            </ul> 
+                            </ul>
 
                       </div><!-- .campus-info  -->
 
-                      <div class="footer-logo">
-                          <p><a href="javascript:void(0)"> 
-                            <img src="style-assets/media/msudenver_informal.svg"  class="footer-logo-img" alt="MSU logo" />
-                          </a></p>
-                          <p class="privacy-statement"><a href="javascript:void(0)"><small>&copy; MSU Denver</small></a> - <a href="javascript:void(0)"><small>Privacy Statement</small></a></p>
 
-                      </div><!-- .footer-logo -->
                   </div><!-- .row -->
 
 
