--- a/development/terminalfour/src/html/homepage.html
+++ b/development/terminalfour/src/html/homepage.html
@@ -14,11 +14,11 @@
         @@include('header.html')
         @@include('topnavigation.html')
         <main class="homepage-main">
-						@@include('homepage-feature-caption.html')
-            @@include('homepage-news.html')
-						@@include('homepage-at-a-glance.html')
-						@@include('homepage-community.html')
-						@@include('homepage-events.html')
+						@@include('homepage/homepage-feature-caption.html')
+            @@include('homepage/homepage-news.html')
+						@@include('homepage/homepage-at-a-glance.html')
+						@@include('homepage/homepage-community.html')
+						@@include('homepage/homepage-events.html')
         </main>
         @@include('footer.html')
         <script src="style-assets/lib/jquery/jquery.min.js"></script>
