--- a/www-root/index.html
+++ b/www-root/index.html
@@ -7,13 +7,15 @@
 
 <body>
 	<h2>Main Layouts</h2>
-	<h3><a href="/homepage.html"> Homepage layout </a></h3>
-	<h3><a href="/web-builder/www-root/homepage.html"> Homepage layout Local Git </a></h3>
-	<h3><a href="/admissions.html"> Admissions layout </a></h3>
-	<h3><a href="/web-builder/www-root/admissions.html"> Admissions layout Git</a></h3>
-	<h3><a href="/2column.html"> 2column layout </a></h3>
+	<h3><a href="/homepage.html"> Homepage layout Localhost</a></h3>
+	<h3><a href="/web-builder/www-root/homepage.html"> Homepage layout Git </a></h3>
+	<h3><a href="/2column.html"> 2column layout Localhost</a></h3>
+	<h3><a href="/web-builder/www-root/1column.html"> 1column layout Git </a></h3>
+	<h3><a href="/1column.html"> 1column layout Localhost</a></h3>
 	<h3><a href="/web-builder/www-root/2column.html"> 2column layout Git </a></h3>
-	<h3><a href="/president.html"> President layout </a></h3>
+	<h3><a href="/admissions.html"> Admissions layout Localhost</a></h3>
+	<h3><a href="/web-builder/www-root/admissions.html"> Admissions layout Git</a></h3>
+	<h3><a href="/president.html"> President layout Localhost</a></h3>
 	<h3><a href="/web-builder/www-root/president.html"> President layout Git</a></h3>
 
 	<h2>Student Hub Layouts</h2>
