--- a/www-root/admissions.html
+++ b/www-root/admissions.html
@@ -116,7 +116,8 @@
                <li id="nav-search" type="button">
                  <a href="#" data-toggle="modal" data-target="#searchModal">
                    <label for="nav-search" class="sr-only">Search MSU Denver dot e d u</label>
-                   <span class="search-button-text"><span class="fa fa-search search-desktop"></span> SEARCH</span>
+                   <span class="search-button-text"><span class="fa fa-search search-desktop"></span> <span
+                       class="search-text">SEARCH</span></span>
                  </a>
                </li>
                <li></li>
@@ -659,24 +660,20 @@ $(window).scroll(function(){
               var width_threshold = 900;
               var href = document.location.href;
               var position = $(window).scrollTop();
-              var width     =  $(window).width();
+              var width = $(window).width();
               $(".header-fluid").removeClass("header-fluid-change");
               $(".msudenver_logo").removeClass("msudenver_logo_change");
-
-
-               if( position <= 15 && width > width_threshold) {
-                  $("a.btn.btn-default.visit-give-mobile").css("top", "-109px");
-                  $("a.btn.btn-default.give-mobile").css("top", "-109px");
-                  $("a.btn.btn-default.apply-mobile").css("top", "-109px");
-               }
+              if( position <= 15 && width> width_threshold) {
+                $("a.btn.btn-default.visit-give-mobile").css("top", "-144px");
+                $("a.btn.btn-default.give-mobile").css("top", "-144px");
+                $("a.btn.btn-default.apply-mobile").css("top", "-144px");
+              }
               if( position > 15 && width > width_threshold) {
                 $(".header-fluid").toggleClass("header-fluid-change");
                 $(".msudenver_logo").toggleClass("msudenver_logo_change");
-                  $("a.btn.btn-default.visit-give-mobile").css("top", "-95px");
-                  $("a.btn.btn-default.give-mobile").css("top", "-95px");
-                  $("a.btn.btn-default.apply-mobile").css("top", "-95px");
+                $("a.btn.btn-default.visit-give-mobile").css("top", "-112px");
+                $("a.btn.btn-default.apply-mobile").css("top", "-112px");
               }
-
             });
 
             $('.carousel').carousel({
